# bindgen

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.archlinux  Dockerfile.debian  Dockerfile.ubuntu  README.md  SPEC.md  STYLEGUIDE.md  TEMPLATE.yml  builtin_types.yml  shard.yml  test.sh  tool.sh
assets/: bindgen_helper.hpp  glue.cr  parser_helper.hpp
ci/: Dockerfile.archlinux  Dockerfile.debian  Dockerfile.ubuntu  install_debian.sh  run.sh
clang/: .gitignore  CMakeLists.txt  Makefile  Makefile.llvm  Makefile.osx  README.md  bindgen.cpp  crystal.cmake  find_clang.cr  generated.hpp  helper.hpp  json_stream.hpp  llvm.cmake  structures.hpp
clang/include/: bindgen_ast_consumer.hpp  bindgen_frontend_action.hpp  clang_type_name.hpp  clang_type_name_llvm_8.hpp  common.hpp  enum_match_handler.hpp  function_match_handler.hpp  generated.hpp  helper.hpp  json_stream.hpp  macro_ast_consumer.hpp  operator_match_handler.hpp  preprocessor_handler.hpp  record_match_handler.hpp  regex.hpp  structures.hpp  type_helper.hpp
clang/src/: bindgen.cpp  bindgen_ast_consumer.cpp  bindgen_frontend_action.cpp  enum_match_handler.cpp  function_match_handler.cpp  json_stream.cpp  macro_ast_consumer.cpp  operator_match_handler.cpp  preprocessor_handler.cpp  record_match_handler.cpp  regex.cpp  structures.cpp  type_helper.cpp
images/: architecture.dot  build.sh  graph.dot  logo.dot
samples/: build.sh  ioctl.cr  ioctl.yml
spec/: README.md  bindgen_spec.cr  spec_helper.cr  type_database_fixture.yml
spec/bindgen/: crystal_literal_formatter_spec.cr  find_path_spec.cr  template_spec.cr  type_database_spec.cr  util_spec.cr
spec/bindgen/call_analyzer/: cpp_methods_spec.cr
spec/bindgen/config_reader/: condition_evaluator_spec.cr  loader_spec.cr  parser_spec.cr
spec/bindgen/find_path/: any_of_checker_spec.cr  checker_spec.cr  generic_version_spec.cr  kind_spec.cr  list_match_collector_spec.cr  match_collector_spec.cr  path_checker_spec.cr  shell_checker_spec.cr  version_checker_spec.cr  versioned_match_finder_spec.cr
spec/bindgen/find_path/fixture/: tool  tool-2.0
spec/bindgen/graph/: container_spec.cr  method_spec.cr  node_spec.cr  path_spec.cr
spec/bindgen/parser/: type_spec.cr  value_spec.cr
spec/bindgen/processor/: enums_spec.cr  extern_c_spec.cr
spec/bindgen/util/: prefix_spec.cr  tribool_spec.cr
spec/clang/: functions_spec.cr  macros_spec.cr  spec_helper.cr
spec/integration/: .gitignore  arguments.cpp  arguments.yml  arguments_spec.cr  basic.cpp  basic.yml  basic_spec.cr  c_only.cpp  c_only.yml  c_only_spec.cr  c_wrapper.cpp  c_wrapper.yml  c_wrapper_spec.cr  containers.cpp  containers.yml  containers_spec.cr  copy_structs.cpp  copy_structs.yml  copy_structs_spec.cr  enums.cpp  enums.yml  enums_spec.cr  inheritance.cpp  inheritance.yml  inheritance_spec.cr  instance_properties.cpp  instance_properties.yml  instance_properties_spec.cr  qt.cpp  qt.yml  qt_spec.cr  spec_base.yml  spec_helper.cr  virtual_override.cpp  virtual_override.yml  virtual_override_spec.cr
spec/integration/tmp/: bindgen_helper.hpp  clean.sh
src/: bindgen.cr  bindgen_lib.cr
src/bindgen/: call.cr  config_reader.cr  configuration.cr  cpp_generator.cr  create_by_name.cr  crystal.cr  crystal_generator.cr  crystal_literal_formatter.cr  find_path.cr  generator.cr  glue_reader.cr  graph.cr  library.cr  processor.cr  statistics.cr  template.cr  tool.cr  type_database.cr  type_helper.cr  util.cr  variables.cr  version.cr
src/bindgen/call_analyzer/: cpp_methods.cr  cpp_to_cpp.cr  cpp_to_crystal.cr  cpp_to_crystal_proc.cr  crystal_binding.cr  crystal_methods.cr  crystal_reverse_binding.cr  crystal_to_cpp.cr  crystal_wrapper.cr  helper.cr
src/bindgen/call_builder/: cpp_call.cr  cpp_method.cr  cpp_method_call.cr  cpp_qobject_connect.cr  cpp_to_crystal_proc.cr  cpp_wrapper.cr  crystal_abstract_def.cr  crystal_binding.cr  crystal_container_of.cr  crystal_from_cpp.cr  crystal_instance_variable.cr  crystal_superclass.cr  crystal_superclass_init.cr  crystal_to_unsafe.cr  crystal_unwrap_initialize.cr  crystal_wrapper.cr
src/bindgen/call_generator/: cpp_crystal_proc.cr  cpp_methods.cr  cpp_proc_type.cr  cpp_qobject_connect.cr  cpp_virtual.cr  cpp_wrapper.cr  crystal_abstract_wrapper.cr  crystal_fun.cr  crystal_lambda.cr  crystal_methods.cr  crystal_proc_type.cr  crystal_wrapper.cr  helper.cr
src/bindgen/config_reader/: condition_evaluator.cr  condition_state.cr  frame.cr  frame_state.cr  inner_parser.cr  loader.cr  parser.cr
src/bindgen/cpp/: argument.cr  cookbook.cr  format.cr  literal_parser.cr  method_name.cr  pass.cr  typename.cr
src/bindgen/crystal/: argument.cr  format.cr  method.cr  pass.cr  type.cr  typename.cr
src/bindgen/find_path/: any_of_checker.cr  checker.cr  configuration.cr  error.cr  generic_version.cr  kind.cr  list_match_collector.cr  match_collector.cr  match_finder.cr  path_checker.cr  shell_checker.cr  version_checker.cr  versioned_match_finder.cr
src/bindgen/generator/: base.cr  cpp.cr  crystal.cr  crystal_lib.cr  runner.cr
src/bindgen/graph/: alias.cr  builder.cr  class.cr  constant.cr  container.cr  cpp_union.cr  dumper.cr  enum.cr  library.cr  method.cr  namespace.cr  node.cr  path.cr  platform.cr  platform_specific.cr  struct.cr  visitor.cr
src/bindgen/parser/: access_specifier.cr  argument.cr  base_class.cr  class.cr  configuration.cr  document.cr  enum.cr  field.cr  macro.cr  method.cr  runner.cr  template.cr  type.cr  type_kind.cr  value.cr
src/bindgen/processor/: auto_container_instantiation.cr  base.cr  block_overloads.cr  copy_structs.cr  cpp_wrapper.cr  crystal_binding.cr  crystal_wrapper.cr  default_constructor.cr  dump_graph.cr  enums.cr  extern_c.cr  filter_methods.cr  function_class.cr  functions.cr  inheritance.cr  instance_properties.cr  instantiate_containers.cr  macros.cr  operators.cr  qt.cr  runner.cr  sanity_check.cr  virtual_override.cr
src/bindgen/template/: base.cr  basic.cr  none.cr  proc_from_wrapper.cr  sequence.cr
src/bindgen/util/: create_by_name.cr  find_matching.cr  prefix.cr  tribool.cr
(+1 files in other folders)
